--- a/views/app.pug
+++ b/views/app.pug
@@ -112,7 +112,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- <![endif]-->
-    script(src="./js/components/ver-check.min.js" async)
+    script(src="./js/ver-check.min.js" async)
   body
     +link({
       class: "skip-main",
