--- a/views/app.pug
+++ b/views/app.pug
@@ -142,7 +142,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
       +footer
 
     script(src="./js/vendor.min.js" async)
-    script(nomodule src="./js/general.min.js" defer)
-    script(id="modern-js" type="module" src="./js/modern.min.js" defer)
+    //- script(nomodule src="./js/general.min.js" defer)
+    //- script(id="modern-js" type="module" src="./js/modern.min.js" defer)
     //- if !dev
       script(src="./js/service.min.js" ph-inline async)
