--- a/views/app.pug
+++ b/views/app.pug
@@ -45,7 +45,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
       }
 
     //- if dev
-      meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/ https://josephojo.com; script-src 'self' https://polyfill.io/ https://cdnjs.cloudflare.com/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; worker-src 'self'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/okikio-assets/")
+      meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/ https://josephojo.com; script-src 'self' https://res.cloudinary.com/ https://polyfill.io/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; worker-src 'self'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/; form-action 'self'; frame-ancestors 'self';")
       meta(http-equiv="Feature-Policy" content="microphone 'none'; geolocation 'none'; usb 'none'; display-capture 'none'; sync-xhr 'self'; camera 'none'; battery 'none'")
 
     meta(name="robots" content="index, follow")
@@ -142,6 +142,6 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     block footer
       +footer
 
-    script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` ph-inline async)
+    script(src=`${dev ? "./js/modern.min.js" : "./js/vendor.min.js"}` async)
     //- if !dev
       script(src="./js/service.min.js" ph-inline async)
