--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -22,7 +22,7 @@ block content
     content: "What drove me to become a Mechatronics Engineer?",
     image: {
       class: "effect-parallax hero-img",
-      src: "/assets/white-flower",
+      src: "cloudinary/white-flower",
       alt: "An image of a white flower surrounded by green leaves from Unsplash."
     }
   })
