--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -22,7 +22,7 @@ block content
     content: "A potfolio of projects I have completed, and even some that are still on-going.",
     image: {
       class: "effect-parallax hero-img",
-      src: "/assets/blue-sky",
+      src: "cloudinary/blue-sky",
       alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash. "
     }
   })
