--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -15,7 +15,7 @@ block content
     content: "Creating the extraordinary is my dream, and my passion.",
     image: {
       class: "effect-parallax hero-img",
-      src: "/assets/grand-canyon",
+      src: "cloudinary/grand-canyon",
       alt: "An image looking up from inside the Grand Canyon from Unsplash."
     }
   })
@@ -142,7 +142,7 @@ block content
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
                   class: "effect-parallax",
-                  src: "/assets/white_car",
+                  src: "cloudinary/white_car",
                   alt: "An image of what looks to be a turquoise Chevrolet, from Unsplash.",
                 }
               })
@@ -163,7 +163,7 @@ block content
                 title: "Google Designs Project",
                 class: "layer-box layer-surface layout-block",
                 image: {
-                  src: "/assets/blue-sky",
+                  src: "cloudinary/blue-sky",
                   alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash.",
                 }
               })
