--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -274,8 +274,8 @@ $sizes: (
     @include propertyList($property, $name, $colors, true, "focus");
 }
 
+@import "./components/fonts.scss";
 @import "./components/base.scss";
-// @import "./components/fonts.scss";
 @import "./components/navbar.scss";
 @import "./components/style.scss";
 @import "./components/action.scss";
