Github page, test 2

--- a/views/app.pug
+++ b/views/app.pug
@@ -114,26 +114,26 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     block seo
       +seo(page)
 
-    link(rel="apple-touch-icon", sizes="57x57", href="/favicon/apple-icon-57x57.png")
-    link(rel="apple-touch-icon", sizes="60x60", href="/favicon/apple-icon-60x60.png")
-    link(rel="apple-touch-icon", sizes="72x72", href="/favicon/apple-icon-72x72.png")
-    link(rel="apple-touch-icon", sizes="76x76", href="/favicon/apple-icon-76x76.png")
-    link(rel="apple-touch-icon", sizes="114x114", href="/favicon/apple-icon-114x114.png")
-    link(rel="apple-touch-icon", sizes="120x120", href="/favicon/apple-icon-120x120.png")
-    link(rel="apple-touch-icon", sizes="144x144", href="/favicon/apple-icon-144x144.png")
-    link(rel="apple-touch-icon", sizes="152x152", href="/favicon/apple-icon-152x152.png")
-    link(rel="apple-touch-icon", sizes="180x180", href="/favicon/apple-icon-180x180.png")
-    link(rel="mask-icon", href="/favicon/favicon.svg", size="any", color="#000000")
+    link(rel="apple-touch-icon", sizes="57x57", href="./favicon/apple-icon-57x57.png")
+    link(rel="apple-touch-icon", sizes="60x60", href="./favicon/apple-icon-60x60.png")
+    link(rel="apple-touch-icon", sizes="72x72", href="./favicon/apple-icon-72x72.png")
+    link(rel="apple-touch-icon", sizes="76x76", href="./favicon/apple-icon-76x76.png")
+    link(rel="apple-touch-icon", sizes="114x114", href="./favicon/apple-icon-114x114.png")
+    link(rel="apple-touch-icon", sizes="120x120", href="./favicon/apple-icon-120x120.png")
+    link(rel="apple-touch-icon", sizes="144x144", href="./favicon/apple-icon-144x144.png")
+    link(rel="apple-touch-icon", sizes="152x152", href="./favicon/apple-icon-152x152.png")
+    link(rel="apple-touch-icon", sizes="180x180", href="./favicon/apple-icon-180x180.png")
+    link(rel="mask-icon", href="./favicon/favicon.svg", size="any", color="#000000")
 
-    link(rel="icon", type="image/png", sizes="512x512", href="/favicon/android-icon-512x512.png")
-    link(rel="icon", type="image/png", sizes="192x192", href="/favicon/android-icon-192x192.png")
-    link(rel="icon", type="image/png", sizes="144x144", href="/favicon/android-icon-144x144.png")
-    link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
-    link(rel="icon", type="image/png", sizes="96x96", href="/favicon/favicon-96x96.png")
-    link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
+    link(rel="icon", type="image/png", sizes="512x512", href="./favicon/android-icon-512x512.png")
+    link(rel="icon", type="image/png", sizes="192x192", href="./favicon/android-icon-192x192.png")
+    link(rel="icon", type="image/png", sizes="144x144", href="./favicon/android-icon-144x144.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="./favicon/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="96x96", href="./favicon/favicon-96x96.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="./favicon/favicon-16x16.png")
 
     <!--[if IE]>
-    link(rel="shortcut icon", href="/favicon/favicon.ico", type="image/x-icon")
+    link(rel="shortcut icon", href="./favicon/favicon.ico", type="image/x-icon")
     <![endif]-->
 
     link(rel="manifest", href="manifest.webmanifest")
@@ -146,7 +146,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     meta(name="apple-mobile-web-app-title" content="jo-ojo")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-status-bar-style", content="#2d22ca")
-    meta(name="msapplication-TileImage", content="/favicon/ms-icon-144x144.png")
+    meta(name="msapplication-TileImage", content="./favicon/ms-icon-144x144.png")
 
     //- link(rel="stylesheet" href="./css/fonts.min.css" ph-inline)
     //- link(rel="preload" href="/fonts/frank-ruhl-libre--black_latin.woff2" as="font" type="font/woff2" crossorigin)
@@ -155,7 +155,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
     //- link(rel="preload" href="./maps/app.min.css.map" as="fetch" crossorigin)
     link(rel="stylesheet" href="./css/app.min.css" ph-inline)
-    link(rel="prefetch" href="/favicon/favicon.svg" as="image" crossorigin)
+    link(rel="prefetch" href="./favicon/favicon.svg" as="image" crossorigin)
 
     //- <!--[if lt IE 9]>
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
