--- a/views/components/link.pug
+++ b/views/components/link.pug
@@ -3,5 +3,5 @@ mixin link(value = {}, noFocus)
 	- let _class = value.class || "layout-inline";
 	- let _href = href === "/" ? "/index.html" : (href[0] === "/" ? `${href}.html` : href);
 
-	a(href=_href class=`${_class} ${noFocus ? "" : "focus-box"}` title=content)&attributes(attributes)= content
+	a(href=`.${_href}` class=`${_class} ${noFocus ? "" : "focus-box"}` title=content)&attributes(attributes)= content
 		block
