Removed fetching favicon.svg twice

--- a/views/app.pug
+++ b/views/app.pug
@@ -155,7 +155,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font" type="font/woff2" crossorigin)
     //- link(rel="preload" href="./maps/app.min.css.map" as="fetch" crossorigin)
     link(rel="stylesheet" href="./css/app.min.css" ph-inline)
-    link(rel="prefetch" href="./favicon/favicon.svg" as="image" crossorigin)
+    //- link(rel="prefetch" href="./favicon/favicon.svg" as="image" crossorigin)
 
     //- <!--[if lt IE 9]>
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
