--- a/views/app.pug
+++ b/views/app.pug
@@ -42,7 +42,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     meta(charset="utf-8")
     meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-    //- base(href="/joseph/")
+    if !dev && githubPages
+      base(href="/joseph/")
 
     script(type="application/ld+json").
       {
