--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -16,7 +16,7 @@ mixin navbar(value = {})
             href: "/",
             class: "navbar-title style-primary-dark-hover style-primary-dark-focus"
           })(itemprop="url")
-            img.navbar-logo(src="../favicon/favicon.svg" alt="Logo.")
+            img.navbar-logo(src="./favicon/favicon.svg" alt="Logo.")
             span.navbar-title-line
             span.layout-inline-block(itemprop="name") JOSEPH!
           .layout-spacer
