--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -52,6 +52,25 @@ block content
               })
               +p("- Hardwork and perseverance, hear all about it.")
               br
+              ul
+                //- Nasa
+                li
+                  +link({
+                    href: "/projects/nasa",
+                    class: "style-italic style-underline layout-margin-right-mini",
+                    content: "Nasa"
+                  })
+                  +p("- Yes that Nasa, find out more.")
+                  br
+                //- Google Designs
+                li
+                  +link({
+                    href: "/projects/google-designs",
+                    class: "style-italic style-underline layout-margin-right-mini",
+                    content: "Google Designs"
+                  })
+                  +p("- I Also worked with Google, specifically their Design team.")
+                  br
 
             //- Contact
             li
