Scroll down should be black on focus as well

--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -153,7 +153,7 @@
                 background-color: var(--secondary, $secondary-light);
             }
 
-            &, &:hover {
+            &, &:hover, &:focus {
                 color: $white;
                 color: var(--black, $white);
             }
