Gettting that 100% on Lighthouse

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -64,7 +64,7 @@ block content
           +link({
             href: "/about-me",
             class: "layout-margin-vert-dull layout-margin-left-mini",
-            content: "click here."
+            content: "Learn more about me."
           })
 
   //- Banner layer
@@ -165,7 +165,7 @@ block content
           +column({
             class: "layout-col-3"
           })
-        
+
         div.layout-block.style-center
           +link({
             href: "/my-projects",
