--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -40,7 +40,7 @@ block content
           +link({
             href: "/",
             class: "layout-margin-horz-left-mini",
-            content: "Click here"
+            content: "Wanna go back home?"
           })
 
   //- Image Column layer
