--- a/views/pages/projects/nasa.pug
+++ b/views/pages/projects/nasa.pug
@@ -35,12 +35,12 @@ block content
       })
         +p(" ")
           span.layout-margin-horz-left-large.layout-inline-block= " "
-          span.layout-inline.layout-margin-dull(lorem="1") 
+          span.layout-inline.layout-margin-dull(lorem="1")
           p.layout-inline.layout-margin-dull(lorem="3")
           +link({
             href: "/",
             class: "layout-margin-horz-left-mini",
-            content: "Click here"
+            content: "Wanna go back home?"
           })
 
   //- Next page layer
