--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -24,7 +24,7 @@ block content
 
   //- Intro layer
   +layer({
-    class: "layout-padding-horz"
+    class: "layout-padding-horz-default--device-gt-tablet"
   })
     +layout({
       class: "layout-shorten layout-contain"
