--- a/views/app.pug
+++ b/views/app.pug
@@ -172,7 +172,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     .layer-action-center.layer-action-center-hide
       article.layer-action-group
         .layer-shadow--1.layer-round.layout-align-self-end.layout-margin-horz-small
-          button.back-to-top.action-btn.action-btn-hover.layer-round.layout-padding-smallest.layer-primary.layer-primary-dark-hover.layer-primary-light-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary(type="button")
+          button.back-to-top.action-btn.action-btn-hover.layer-round.layout-padding-smallest.layer-primary.layer-primary-light-hover.layer-primary-light-focus.style-white.style-hover-white.style-focus-white(type="button")
             span.action-btn-group
               span.action-btn-section
                 span.action-btn-spacer
