--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -13,7 +13,7 @@ block pageInfo
 block content
   //- Intro layer
   +layer({
-    class: "layout-padding-horz"
+    class: "layout-padding-horz-default--device-gt-tablet"
   })
     +layout({
       class: "layout-contain-small layout-vert-centered-box"
