--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -24,7 +24,7 @@ block content
 
   //- Intro layer
   +layer({
-    class: "layout-padding-horz layout-padding-vert-top-default--device-phone"
+    class: "layout-padding-horz-default--device-gt-tablet layout-padding-vert-top-default--device-phone"
   })
     +layout({
       class: "layout-shorten layout-contain-small"
@@ -34,9 +34,9 @@ block content
         class: "layout-padding-vert-small"
       })
         span.layout-margin-horz-left-large.layout-inline-block= " "
-        +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> In case you were wondering what my skills outside engineering are, they include problem-solving, leadership, communication and conflict resolution. For more info. check out my resume")
+        +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> In case you were wondering what my skills outside engineering are, they include problem-solving, leadership, communication and conflict resolution. For more info. check out ")
         +link({
           href: "/my-resume",
           class: "layout-margin-vert-dull layout-margin-left-mini",
-          content: "here."
+          content: "my resume."
         })(data-swup-preload)
