--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -13,10 +13,10 @@ block pageInfo
 block content
   //- Intro layer
   +layer({
-    class: "layout-padding-horz-default--device-gt-tablet"
+    class: "layout-padding-horz-default--device-gt-tablet header-top-spot"
   })
     +layout({
-      class: "layout-contain-small layout-vert-centered-box"
+      class: "layout-contain-small layout-shorten-vert"
     })
       section
         +head
@@ -41,7 +41,15 @@ block content
                 content: "About Me"
               })
               +p("- The story of me, myself and I. Shall we begin?")
-              br
+              ul
+                //- Resume
+                li
+                  +link({
+                    href: "/my-resume",
+                    class: "style-italic style-underline layout-margin-right-mini",
+                    content: "My Resume"
+                  })
+                  +p("- All the qualifications I have aquired over my life time, in readable, bite sized, format.")
 
             //- Projects
             li
@@ -81,18 +89,3 @@ block content
               })
               +p("- Do you have a project that demands perservance and passion? Then, lets talk.")
               br
-
-            //- Resume
-            li
-              +link({
-                href: "/my-resume",
-                class: "style-italic style-underline layout-margin-right-mini",
-                content: "My Resume"
-              })
-              +p("- All the qualifications I have aquired over my life time, in readable, bite sized, format.")
-              br
-
-block footer
-  +footer({
-    class: "footer-stuck layout-margin-vert-top"
-  })
